# anordating

./: .env.example  .gitignore  Dockerfile  README.md  add_geocoding.py  compose.azure.yaml  compose.override.yaml  compose.prod.yaml  compose.yaml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tasks.md  todo.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0da5eeef72c5_allow_cascading.py  1621442f509d_add_places.py  258163e42b29_add_report_table.py  281ee6809e1d_allow_cascading_2.py  3cfd5ab2eef5_add_user_preferences_file_tables.py  3d41c209db4d_make_location_mandatory.py  4e5ca2b16f49_add_preferences.py  554c980de01f_make_user_pk_uuid.py  5606164a5c28_.py  654db394ec78_update_file_table.py  660fdb5d0c32_add_timestamp.py  8636dd26ea85_update_file_table.py  8b3f3d4f150e_add_phone_number_to_user_account.py  8ba7b8c5f9a5_remove_unique_constraint_from_place_id.py  9079d0c73d23_add_id_field_to_user_media_and_.py  a196d45d5450_create_user_table.py  a228992c6dd1_add_is_match_notified_field.py  acc2841875cf_add_default_status_to_report.py  ae1b6a06cfff_make_phone_number_required.py  b0186e7a6e10_change_age_to_birth_date.py  bf07d6322c9b_update_user.py  (+6 more)
app/: bot_commands.py  enums.py  filters.py  geocoding.py  handlers.py  keyboards.py  middlewares.py  orm.py  queries.py  states.py  utils.py  validators.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
frontend/: Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
locales/: commands.txt
(+112 files in other folders)
